[package]
name = "simple-ljt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.28.2", features = ["full"] }
futures-channel = "*"
futures = "*"
async-stream = "0.2"
url="*"
tonic = "0.9.2"
prost = "0.11.9"
uuid = { version = "*", features = ["v4"] }
crossterm = "0.26.1"
tui = {version = "0.19.0", features= ['crossterm']}

[build-dependencies]
tonic-build = "0.9.2"
